[package]
name = "theback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros", "headers"] }
dotenv = "0.15.0"
hyper = "1.0.1"
spotify-rs = { git = "https://github.com/domanteli0/spotify-rs.git" }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }

